# cellora

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE.md  README.md  docker-compose.yml
.sqlx/: query-0823132bc40a2e3962b9960b70aea9df17cfcefa20b703d5bc08ad91debe2a91.json  query-1c07a468c95f342b8266b5fdfa587a4037273c7d6088631789d424a6091afcb6.json  query-2182c4f3d386b931104acf460649d13176c4d50f7323a6cadbfa560fc192240e.json  query-40935a8b6e3450e168fb4c33e6e596adc617d803e8af3baa343824b89e986116.json  query-422eeb8da8eabedd40677c17ffec149a923a15c3256e4edd483979ae2607e1be.json  query-44afeba5ed188be6fed1acaeea1cd30d07b7581aa6f1fc52f5aa9641a47f423a.json  query-5367dceb6e97704094075b862c65a116dfb79828cddea531cfd3641ccd25f708.json  query-56e45457b364df91eb98980a16600ba0633ecd2e443113adf74d3c3a790c848d.json  query-66e07d63bc0094c33e760cec2e1295c42c7e61d40d023ced0b48f5c7776dec06.json  query-68699bcd820ad3561e3f8f39527ca37e6a55c72cc5df0bf2ae95c871ae704b5f.json  query-7b2ae13a87cd020aa4937b4b1818438c8d6b8922ecafb4578083b4bfb008aa63.json  query-803892e43b4a642fdf8c0c7f04809ae7e71179276a4515a6ab9e17a6d1b33aa2.json  query-8220452d57aeefd94e4431ac39c1da623c50f74c762675d434ff38526d6bc84f.json  query-9145c2b63dffe57b1ded0b217da2056fd49f611b84b9145e1bad6c0454a16ae7.json  query-950e0c25cdd413fa8f6c08a88bc9ef8022e84caa8938263de5889871850e8c29.json  query-a45e07ef1c1ee2455bb442f91fc58ffc83e1585eb1a27ef2da5c6d3fedf724ac.json  query-b7f045555fa9279a2b3432c8dc0f769f3732c8008b3acfc1579fb415d44755ba.json  query-bc1a5479cd7a2501dd5bedf584517984ceedc344e9ef9d85eef94519ed2dbb86.json  query-d80bcb77384364da967220a3367573399f583049c45e8e270a6f1d58370a6fc3.json  query-dcde0c5b24fb6980e1bc9e32d90b96f60b7fe1d70bcbfe01df8231b861947b1e.json  query-e37af1081ea984b53810fe643fd9dce9429cb9fb4f1a12f5cde8efe6b62b2636.json  query-fef54ce535c5014bcc0500f858af98624d351bf560d2f4b2f6cf6560520b9f81.json
crates/api/: Cargo.toml
crates/api/src/: admin.rs  auth.rs  error.rs  graphql.rs  hex.rs  keys.rs  lib.rs  main.rs  metrics.rs  openapi.rs  pagination.rs  ratelimit.rs  state.rs  tip.rs
crates/api/src/routes/: blocks.rs  cells.rs  health.rs  mod.rs  proofs.rs  stats.rs
crates/api/src/scripts/: mod.rs  registry.rs
crates/api/tests/: api_e2e.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  error.rs  lib.rs  logging.rs
crates/common/src/ckb/: client.rs  mod.rs  types.rs
crates/db/: Cargo.toml
crates/db/src/: api_keys.rs  blocks.rs  cells.rs  checkpoint.rs  error.rs  lib.rs  migrate.rs  models.rs  pool.rs  reorg_log.rs  transactions.rs
crates/db/tests/: db_integration.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: app.rs  lib.rs  main.rs  metrics.rs  metrics_server.rs  parser.rs  poller.rs  reorg.rs  shutdown.rs
crates/indexer/tests/: indexer_stack_test.rs  parser_test.rs  reorg_test.rs
crates/indexer/tests/fixtures/: block_12.json  block_genesis.json
docs/: architecture-overview.md  architecture.md  openapi.json
docs/decisions/: 0001-crate-boundaries.md
migrations/: 20260417000001_init.down.sql  20260417000001_init.up.sql  20260427000001_api_keys.up.sql  20260504000001_reorg_log.down.sql  20260504000001_reorg_log.up.sql
ops/ckb/: entrypoint.sh
scripts/: dev-up.sh
tests/load/: rate_limit.js
