[workspace]
resolver = "2"
members = [
    "crates/api",
    "crates/common",
    "crates/db",
    "crates/indexer",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
# Functional Source License, Version 1.1, with Apache-2.0 future license.
# See LICENSE.md at the repository root for the full terms. Non-SPDX, so we
# point cargo at the file rather than the identifier.
license-file = "LICENSE.md"
repository = "https://github.com/antismart/cellora"
authors = ["Cellora contributors"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
dbg_macro = "deny"
print_stdout = "deny"
print_stderr = "deny"
unimplemented = "deny"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "sync", "process"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures = "0.3"

# Error handling
thiserror = "1"
anyhow = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }

# Configuration
figment = { version = "0.10", features = ["env", "toml"] }
dotenvy = "0.15"

# HTTP / CKB
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
ckb-jsonrpc-types = "0.117"
ckb-types = "0.117"
ckb-hash = "0.117"

# HTTP server (API crate)
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "macros", "query", "matched-path"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "request-id", "catch-panic", "util"] }
http = "1"
http-body-util = "0.1"
base64 = "0.22"
arc-swap = "1"
utoipa = { version = "5", features = ["axum_extras", "chrono"] }

# Database
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "chrono",
    "bigdecimal",
    "json",
] }

# Misc
url = "2"
hex = "0.4"
bigdecimal = { version = "0.4", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "serde"] }
async-trait = "0.1"

# Test-only
testcontainers = "0.20"
testcontainers-modules = { version = "0.8", features = ["postgres"] }
wiremock = "0.6"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
debug = 1
