[package]
name = "cellora-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
authors.workspace = true
description = "Database layer (Postgres via SQLx) for the Cellora indexer."

[lints]
workspace = true

[dependencies]
cellora-common = { path = "../common" }

sqlx = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true }
